# CameraOpenCv

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/opencv2/core/: mat.hpp  mat.inl.hpp
app/src/main/java/com/henry/rtmp/cameraopencv/: MainActivity.java
app/src/main/java/com/henry/rtmp/cameraopencv/camera/: Camera2Manager.kt  Camera2Proxy.java  Camera2SurfaceView.java  CameraSurfaceManager.kt  CaptureCallBack.kt  WebRtcSurfaceView.kt  WriteByte.kt
app/src/main/java/com/henry/rtmp/cameraopencv/camera2/: AutoFitSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
